--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <br>
     <div class="score">Points: <span class="score--value">00</span></div>
-    <div class="cache">Max Points: <span class="cache--value">00</span></div>
+    <div class="max">Max Points: <span class="max--value">00</span></div>
     <br>
     <div class="menu-screen">
       <span class="game-over">game over!!!</span>
