ADD CREDITS AND INFO ADD

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
 <div style="--aspect-ratio: 4/3" >
     <canvas width="600" height="600" id="canvas"></canvas>
 </div>
+<div class="container-braz">
+  <a href="https://www.linkedin.com/in/thiago-braz-092b09ba">
+      <img src="./assets/linkedin-logo-vector.jpg" alt="Imagem do LinkedIn" class="linkedin-image">
+  </a>
+  <a href="https://github.com/tatobrazm">
+      <img src="./assets/github_vector.png" alt="Imagem do Github" class="github-image">
+  </a>
+  <div class="name">Thiago Braz</div>
+  <div class="job-title">Software Developer</div>
+  <div class="infoadd">This content does not contain commercial interest, only for study and entertainment purposes.</div>
+</div>
     <script src="./js/scripts.js"></script>
   </body>
 </html>
